<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_login"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:id="@+id/linearLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_login_account"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/user_account" />

            <EditText
                android:id="@+id/etLoginPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:hint="@string/login_phone"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/shape_cursor_color"
                android:textColor="@color/black"
                android:textColorHint="#c9c9c9"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_login_account"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/user_psw" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/shape_cursor_color"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#c9c9c9"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLoginForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/login_forget"
            android:textColor="@color/colorTab"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"/>
        <TextView
            android:id="@+id/tvRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/blue"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#3BD0EA"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="bottom"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/login_no_account"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="right"
            android:text="@string/login_register"
            android:textColor="@color/colorTab"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
